# proc_macro_playground

./: Cargo.toml  rustfmt.toml
examples/: test.rs
src/: lib.rs
